# starting-raghatbot-codebase

./: .gitignore  CLAUDE.md  backend-refactor-tool.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  check_quality.sh  document_processor.py  format_code.sh  pyproject.toml  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system_integration.py  test_vector_store.py
backend/tests/test_data/: test_course_complete.txt  test_course_edge_cases.txt  test_course_malformed.txt  test_course_minimal.txt
frontend/: index.html  script.js  style.css
